--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,20 +1,28 @@
 {
   "name": "backend",
   "version": "0.0.1",
+  "main": "./src/index.ts",
   "type": "module",
   "scripts": {
     "dev": "bun run --define process.env.NODE_ENV=\"'development'\" --hot ./src/index.ts",
-    "build": "bun build --define process.env.NODE_ENV=\"'production'\" --entrypoints ./src/index.ts --outdir ./dist",
+    "build": "bun build --define process.env.NODE_ENV=\"'production'\" --entrypoints ./src/index.ts --outdir ./dist --target=bun",
     "typecheck": "tsc --noEmit -p tsconfig.json --composite false",
     "start": "bun run ./dist/index.js",
     "clean": "rm -rf ./node_modules/ ./dist/"
   },
   "dependencies": {
-    "superjson": "catalog:",
-    "@trpc/server": "catalog:",
-    "zod": "catalog:",
+    "@aws-sdk/client-s3": "^3.0.0",
     "@hono/trpc-server": "^0.3.2",
-    "hono": "^4.6.5"
+    "@hono/zod-validator": "^0.1.0",
+    "@sinclair/typebox": "^0.31.0",
+    "@trpc/server": "catalog:",
+    "generic-pool": "^3.9.0",
+    "hono": "^4.6.5",
+    "ioredis": "^5.4.1",
+    "neverthrow": "^6.0.0",
+    "rate-limiter-flexible": "^3.0.0",
+    "superjson": "catalog:",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@types/bun": "latest"
