--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -9,9 +9,19 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
-    }
+      "src/*": [
+        "src/*"
+      ]
+    },
+    "types": [
+      "bun"
+    ]
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
