--- a/apps/desktop/tsconfig.web.json
+++ b/apps/desktop/tsconfig.web.json
@@ -14,7 +14,8 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "types": [
-      "vite/client"
+      "vite/client",
+      "bun"
     ],
     "paths": {
       "@renderer/*": [
