--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [main]
     paths:
+      - '.github/workflows/build-desktop.yml'
       - 'packages/app/**'
       - 'packages/ui/**'
       - 'packages/shared/**'
@@ -12,6 +13,7 @@ on:
   pull_request:
     branches: [main]
     paths:
+      - '.github/workflows/build-desktop.yml'
       - 'packages/app/**'
       - 'packages/ui/**'
       - 'packages/shared/**'
@@ -101,7 +103,6 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           mkdir -p apps/desktop/dist/linux apps/desktop/dist/unpacked
-
           mv apps/desktop/dist/*.AppImage apps/desktop/dist/linux/ || true
           mv apps/desktop/dist/*.deb apps/desktop/dist/linux/ || true
           mv apps/desktop/dist/*.snap apps/desktop/dist/linux/ || true
@@ -124,7 +125,6 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: |
           mkdir -p apps/desktop/dist/mac apps/desktop/dist/unpacked
-
           mv apps/desktop/dist/*.dmg apps/desktop/dist/mac/ || true
           mv apps/desktop/dist/*.zip apps/desktop/dist/mac/ || true
           mv apps/desktop/dist/latest-mac.yml apps/desktop/dist/mac/latest.yml || true
@@ -140,18 +140,25 @@ jobs:
       - name: Upload builds to S3 for Linux
         if: matrix.os == 'ubuntu-latest'
         run: |
-          aws s3 cp apps/desktop/dist/linux/ s3://${{ secrets.S3_BUCKET_NAME }}/releases/${{ env.APP_VERSION }}/linux/ --recursive
+          aws s3 cp apps/desktop/dist/linux/ s3://${{ secrets.S3_BUCKET_NAME }}/download/releases/${{ env.APP_VERSION }}/linux/ --recursive
 
       - name: Upload builds to S3 for Windows
         if: matrix.os == 'windows-latest'
         run: |
-          aws s3 cp apps/desktop/dist/windows/ s3://${{ secrets.S3_BUCKET_NAME }}/releases/${{ env.APP_VERSION }}/windows/ --recursive
+          aws s3 cp apps/desktop/dist/windows/ s3://${{ secrets.S3_BUCKET_NAME }}/download/releases/${{ env.APP_VERSION }}/windows/ --recursive
 
       - name: Upload builds to S3 for MacOS
         if: matrix.os == 'macos-latest'
         run: |
-          aws s3 cp apps/desktop/dist/mac/ s3://${{ secrets.S3_BUCKET_NAME }}/releases/${{ env.APP_VERSION }}/mac/ --recursive
+          aws s3 cp apps/desktop/dist/mac/ s3://${{ secrets.S3_BUCKET_NAME }}/download/releases/${{ env.APP_VERSION }}/mac/ --recursive
 
-      - name: Upload unpacked files to S3
+  clear_cache:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Clear backend releases metadata cache
         run: |
-          aws s3 cp apps/desktop/dist/unpacked/ s3://${{ secrets.S3_BUCKET_NAME }}/releases/${{ env.APP_VERSION }}/unpacked/${{ matrix.os }}/ --recursive
+          curl -X POST "${{ secrets.VITE_API_BASE_URL }}/api/releases/clear-cache" \
+            -H "Authorization: Bearer ${{ secrets.AUTH_SECRET_ACCESS_KEY }}" \
+            -H "Content-Type: application/json"
