--- a/.github/workflows/deploy-linux.yml
+++ b/.github/workflows/deploy-linux.yml
@@ -4,6 +4,14 @@ on:
   push:
     branches: [main]
     paths:
+      - '.github/workflows/deploy-linux.yml'
+      - 'apps/web/**'
+      - 'apps/backend/**'
+      - 'packages/**'
+  pull_request:
+    branches: [main]
+    paths:
+      - '.github/workflows/deploy-linux.yml'
       - 'apps/web/**'
       - 'apps/backend/**'
       - 'packages/**'
@@ -46,6 +54,7 @@ jobs:
           echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> apps/backend/.env
           echo "S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }}" >> apps/backend/.env
           echo "REDIS_URL=${{ secrets.REDIS_URL }}" >> apps/backend/.env
+          echo "AUTH_SECRET_ACCESS_KEY=${{ secrets.AUTH_SECRET_ACCESS_KEY }}" >> apps/backend/.env
 
       - name: Build backend app
         run: |
