--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -8,20 +8,8 @@
     "declarationMap": true,
     "skipLibCheck": true,
     "baseUrl": ".",
-    "paths": {
-      "src/*": [
-        "src/*"
-      ]
-    },
-    "types": [
-      "bun"
-    ]
+    "types": ["bun"]
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src/**/*", "bun.d.ts"],
+  "exclude": ["node_modules", "dist"]
 }
