--- a/.github/workflows/deploy-linux.yml
+++ b/.github/workflows/deploy-linux.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Build web app
         run: pnpm --filter web build
         env:
-          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
+          VITE_API_BASE_URL: ${{ secrets.API_BASE_URL }}
 
       - name: Create .env file for backend app
         run: |
