--- a/.github/workflows/deploy-linux.yml
+++ b/.github/workflows/deploy-linux.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - '.github/workflows/deploy-linux.yml'
       - 'apps/web/**'
+      - 'apps/site/**'
       - 'apps/backend/**'
       - 'packages/**'
   pull_request:
@@ -14,6 +15,7 @@ on:
       - '.github/workflows/deploy-linux.yml'
       - 'apps/web/**'
       - 'apps/backend/**'
+      - 'apps/site/**'
       - 'packages/**'
 
 jobs:
@@ -46,6 +48,9 @@ jobs:
         env:
           VITE_API_BASE_URL: ${{ secrets.API_BASE_URL }}
 
+      - name: Build site app
+        run: pnpm --filter site build
+
       - name: Create .env file for backend app
         run: |
           echo "PORT=${{ secrets.BACKEND_PORT }}" >> apps/backend/.env
@@ -71,25 +76,32 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H $SERVER_IP >> ~/.ssh/known_hosts
 
-          # Create deployment directories with correct permissions
-          ssh $SERVER_USER@$SERVER_IP "sudo mkdir -p /var/www/html/web && sudo mkdir -p ~/app/backend"
+          # If non existent, create deployment directories
+          ssh $SERVER_USER@$SERVER_IP "sudo mkdir -p /var/www/html/web /var/www/html/site ~/app/backend"
 
-          # Set ownership for the web directory
-          ssh $SERVER_USER@$SERVER_IP "sudo chown -R $SERVER_USER:$SERVER_USER /var/www/html/web ~/app/backend"
+          # Set ownership over the directories
+          ssh $SERVER_USER@$SERVER_IP "sudo chown -R $SERVER_USER:$SERVER_USER /var/www/html/web /var/www/html/site ~/app/backend"
 
-          # Copy web dist files to Apache directory
+          # Copy web dist files
           scp -r apps/web/dist $SERVER_USER@$SERVER_IP:/var/www/html/web
 
-          # Copy backend dist files
+          # Copy site dist files
+          scp -r apps/site/dist $SERVER_USER@$SERVER_IP:/var/www/html/site
+
+          # Copy backend dist files & .env
           scp -r apps/backend/dist $SERVER_USER@$SERVER_IP:~/app/backend
-          # Copy backend .env file
           scp -r apps/backend/.env $SERVER_USER@$SERVER_IP:~/app/backend/.env
 
-          # Install dependencies and start/restart PM2 processes for the backend
-          ssh $SERVER_USER@$SERVER_IP "cd ~/app/backend && /home/ubuntu/.local/share/pnpm/pm2 restart backend || /home/ubuntu/.local/share/pnpm/pm2 start ./dist/index.js --name backend --interpreter bun"
+          # Start/restart PM2 process & reload nginx
+          ssh $SERVER_USER@$SERVER_IP << 'EOF'
+            cd ~/app/backend
+            /home/ubuntu/.local/share/pnpm/pm2 restart backend || \
+            /home/ubuntu/.local/share/pnpm/pm2 start ./dist/index.js --name backend --interpreter bun
+            sudo systemctl reload nginx
+          EOF
 
-          # Set appropriate permissions for Apache to serve the web app
-          ssh $SERVER_USER@$SERVER_IP "sudo chown -R www-data:www-data /var/www/html/web"
+          # Set appropriate permissions for nginx to serve the static apps
+          ssh $SERVER_USER@$SERVER_IP "sudo chown -R www-data:www-data /var/www/html/web /var/www/html/site"
 
       - name: Cleanup
         if: always()
