--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -2,3 +2,11 @@ singleQuote: true
 semi: true
 printWidth: 100
 trailingComma: none
+
+plugins:
+  - prettier-plugin-astro
+
+overrides:
+  - files: '*.astro'
+    options:
+      parser: astro
