--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^9.0.1",
     "husky": "^9.1.6",
     "prettier": "catalog:",
+    "prettier-plugin-astro": "^0.14.1",
     "turbo": "2.1.1"
   },
   "packageManager": "pnpm@9.12.0",
