--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -8,8 +8,16 @@
     "declarationMap": true,
     "skipLibCheck": true,
     "baseUrl": ".",
-    "types": ["bun"]
+    "types": [
+      "bun"
+    ]
   },
-  "include": ["src/**/*", "bun.d.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src/**/*",
+    "bun.d.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
