--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -14,18 +14,23 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.2",
+    "@repo/shared": "workspace:*",
     "@repo/ui": "workspace:*",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@tanstack/react-query": "catalog:",
+    "@types/react": "catalog:react18",
+    "@types/react-dom": "catalog:react18",
     "astro": "^4.16.7",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "lucide-react": "catalog:",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "catalog:react18",
+    "react-dom": "catalog:react18",
     "tailwindcss": "catalog:",
     "typescript": "catalog:"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.12"
+    "@types/lodash": "^4.17.12",
+    "prettier": "catalog:",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
