--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -6,18 +6,19 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "@electron-toolkit/preload": "catalog:",
+    "@tanstack/react-query": "catalog:",
+    "@trpc/client": "catalog:",
+    "@trpc/react-query": "catalog:",
+    "@trpc/server": "catalog:",
+    "hono": "^4.6.5",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
-    "@tanstack/react-query": "^5.59.14",
-    "@trpc/client": "catalog:",
-    "@trpc/server": "catalog:",
-    "@trpc/react-query": "catalog:",
-    "superjson": "catalog:",
-    "@electron-toolkit/preload": "catalog:"
+    "superjson": "catalog:"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
     "backend": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "catalog:",
     "@types/react": "catalog:react18",
     "@types/react-dom": "catalog:react18",
@@ -25,6 +26,7 @@
   },
   "exports": {
     "./trpc": "./src/trpc/index.ts",
+    "./rpc": "./src/rpc/index.ts",
     "./types/*": "./src/types/*.d.ts"
   }
 }
