--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -17,7 +17,8 @@ catalog:
   '@trpc/server': ^11.0.0-rc.576
   '@vitejs/plugin-react': ^4.3.2
   '@types/node': ^20
-  '@electron-toolkit/preload': '^3.0.1'
+  '@electron-toolkit/preload': ^3.0.1
+  '@tanstack/react-query': ^5.59.14
 
 catalogs:
   react18:
